tests/invalid/annotation_list_callable_elem_unsupported/main.py
def main() -> None:
    xs: list[callable[[int], int]] = []
